--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "fw-state",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/fw-state.js",
+  "module": "dist/fw-state.js",
+  "typings": "dist/fw-state.d.ts",
   "scripts": {
-    "build": "./node_modules/.bin/gulp build",
+    "build": "rm -Rf build-temp && ./node_modules/.bin/tsc --module commonjs --target es6 --outDir build-temp -d && ./node_modules/.bin/dts-bundle --name fw-state --main build-temp/index.d.ts && ./node_modules/.bin/rollup -c && cp build-temp/fw-state.d.ts dist/",
     "test": "./node_modules/.bin/gulp test; ./node_modules/.bin/gulp clean"
   },
   "author": "",
   "license": "ISC",
-  "typings": "./dist/fw-state.d.ts",
   "devDependencies": {
-    "babel-polyfill": "^6.13.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
     "del": "^2.2.1",
     "dts-generator": "^2.0.0",
+    "dts-bundle": "^0.7.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^5.2.1",
     "gulp-clean": "^0.3.2",
@@ -24,7 +27,11 @@
     "istanbul": "^0.4.4",
     "mocha": "^3.0.2",
     "run-sequence": "^1.2.1",
-    "typescript": "^2.0.9",
+    "rollup": "^0.41.5",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-typescript2": "^0.2.1",
+    "tslib": "^1.6.0",
+    "typescript": "2.1.6",
     "vinyl-paths": "^2.1.0"
   }
 }
