--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "fw-state",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "",
-  "main": "dist/fw-state.js",
+  "main": "dist/fw-state-cjs.js",
   "module": "dist/fw-state.js",
   "typings": "dist/fw-state.d.ts",
   "scripts": {
-    "build": "rm -Rf build-temp && ./node_modules/.bin/tsc --module commonjs --target es6 --outDir build-temp -d && ./node_modules/.bin/dts-bundle --name fw-state --main build-temp/index.d.ts && ./node_modules/.bin/rollup -c && cp build-temp/fw-state.d.ts dist/",
+    "build": "rm -Rf build-temp && ./node_modules/.bin/tsc --module commonjs --target es6 --outDir build-temp -d && ./node_modules/.bin/dts-bundle --name fw-state --main build-temp/index.d.ts && ./node_modules/.bin/rollup -c && ./node_modules/.bin/rollup -c --format cjs -o dist/fw-state-cjs.js && cp build-temp/fw-state.d.ts dist/",
     "test": "./node_modules/.bin/gulp test; ./node_modules/.bin/gulp clean"
   },
   "author": "",
